--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sitio Web</title>
+</head>
+<body>
+    <h1>Bienvenidos a mi sitio web estatico</h1>
+    <p>Este es un ejemplo de una pagina web simple, usando HTML</p>
+    
+    
+</body>
+</html>
