--- a/lab17.html
+++ b/lab17.html
@@ -14,7 +14,8 @@
     <br>
     <!--Seccion Bibliografia-->
     <section>
-        <h2>Bibiliografia</h2>
+        <button onclick="mostrarMensaje()">Bienvenidos!</button>
+        <h2>Biografia</h2>
         <p>Juan Pablo Gómez es profesional en Finanzas y Negocios Internacionales con experiencia en el sector empresarial como analista de ventas en Tiqal S.A.S. y jefe de cartera en GCA International Group. Su trayectoria combina el liderazgo social con la innovación, destacándose como ponente en Movimiento E, donde ha acompañado a jóvenes en contextos vulnerables compartiendo su experiencia emprendedora. También fue seleccionado en el semillero Colfuturo, lo que reafirma su compromiso con la formación académica y el impacto social. Actualmente se encuentra en etapa de ideación de una startup EdTech–FinTech orientada a la educación y la inclusión financiera, con especial interés en ciberseguridad aplicada a finanzas. Ha complementado su formación con certificaciones en ciberseguridad (Cisco, Coursera, TalentoTech), programación, inglés de negocios y SAP, además de una beca de liderazgo en McKinsey.org. Sus intereses abarcan la innovación, la tecnología, la educación con impacto social y la historia, junto con aficiones como la música clásica, la ópera, los deportes extremos y la cultura del café.</p>
     </section>
     <!--Seccion Habilidades-->
