--- a/lab17.html
+++ b/lab17.html
@@ -37,7 +37,7 @@
     <!--Pie de pagina-->
     <section>
         <h2>Contacto</h2>
-        <form action="">
+        <form id="contactForm" action="">
             <label>Nombre: </label>
             <input type="text" name="nombre" id="" name="nombre">
             <label>Correo electronico: </label>
