--- a/lab17.html
+++ b/lab17.html
@@ -39,7 +39,7 @@
         <h2>Contacto</h2>
         <form id="contactForm" action="">
             <label>Nombre: </label>
-            <input type="text" name="nombre" id="" name="nombre">
+            <input type="text" id="name" name="nombre"> 
             <label>Correo electronico: </label>
             <input type="email" id="email" name="email">
             <br>
